sonar(KIBON-3353): use java List.of instead of googles ImmutableList.of
 - List.of is immutable since java 9
 - use java internals instead of library where possible